[package]
name = "vscode-ext-rs"
version = "0.1.0"
authors = ["Patrick White <1275985+packysauce@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# macros = { path = "macros" }  # we'll need em eventually
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
deno_ast = { version = "0.24.0", features = ["typescript", "visit"] }
clap = { version = "4.1.6", features = ["derive"] }
anyhow = "1.0.69"
syn = "1.0.109"
quote = "1.0.23"
paste = "1.0.11"
proc-macro2 = "1.0.51"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
derive_more = { version = "0.99.17", features = ["deref"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"